# Feature 5 — favoritos persistidos localmente
appId: com.puciec.ghiblifinal
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "item-list-screen"
    timeout: 20000
- tapOn:
    id: "item-card-2baf70d1-42bb-4437-b551-e5fed5a87abe"
- assertVisible:
    id: "detail-screen"
- tapOn:
    id: "detail-favorite-button"
- tapOn:
    id: "detail-back-button"
- tapOn:
    id: "tab-favorites"
- assertVisible:
    id: "favorite-item-2baf70d1-42bb-4437-b551-e5fed5a87abe"
