# Feature 3 — busca por texto
appId: com.puciec.rickmortyfinal
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "item-list-screen"
    timeout: 20000
- tapOn:
    id: "search-input"
- inputText: "summer"
- assertVisible:
    id: "item-card-3"
