# Feature 3 — busca por texto
appId: com.puciec.cocktail_final
---
- launchApp
- extendedWaitUntil:
    visible:
      id: "item-list-screen"
    timeout: 20000
- tapOn:
    id: "search-input"
- inputText: "cosmopolitan"
- assertVisible:
    id: "item-card-17196"
